[gd_scene load_steps=3 format=2]

[ext_resource path="res://battle/Battle.gd" type="Script" id=1]
[ext_resource path="res://spot_group.gd" type="Script" id=2]

[node name="Battle" type="Node2D"]
script = ExtResource( 1 )

[node name="EnemiesPos" type="Position2D" parent="."]
position = Vector2( 802, 354 )

[node name="AlliesPos" type="Position2D" parent="."]
position = Vector2( 517, 353 )

[node name="Tween" type="Tween" parent="."]

[node name="EnemySpots" type="Node2D" parent="."]
position = Vector2( 636, 136 )
script = ExtResource( 2 )
disToCover = 700
